Fix spacing around new bibliography

--- a/pages/style.css
+++ b/pages/style.css
@@ -279,7 +279,6 @@ footer a:hover {text-decoration: underline;}
 
 #bibliography_container {
   width: 60%;
-  margin-left: 20%;
 }
 
 #bibliography_container > div {
